card y colores de fondo

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,12 +1,9 @@
-<div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text">
-        <div class="logo-img">
+<div class="logo" style="background-color: #fff8dc;" fxLayout="column" fxLayoutAlign="center center">
+        <div class="logo-img" fxLayoutAlign="center center" fxLayout="column">
             <img src="/assets/img/logo-cipe.png"/>
         </div>
-        CIPE
-    </a>
 </div>
-<div class="sidebar-wrapper">
+<div class="sidebar-wrapper" style="background-color: #fff8dc;">
   <div *ngIf="isMobileMenu()">
     <!-- <form class="navbar-form">
       <span class="bmd-form-group">
