--- a/src/app/icons/icons.component.html
+++ b/src/app/icons/icons.component.html
@@ -1,29 +1,18 @@
-<!-- 
-<div class="main-content">
-  <div class="container-fluid">
-      <div class="card card-plain">
-          <div class="card-header card-header-danger">
-              <h4 class="card-title">Material Design Icons</h4>
-              <p class="card-category">Handcrafted by our friends from
-                  <a target="_blank" href="https://fonts.google.com/icons">Google</a>
-              </p>
-          </div>
-          <div class="row">
-              <div class="col-md-12">
-                  <div class="card-body">
-                      <div class="iframe-container d-none d-lg-block">
-                          <iframe src="https://material.io/design/iconography/system-icons.html#grid-and-keyline-shapes">
-                              <p>Your browser does not support iframes.</p>
-                          </iframe>
-                      </div>
-                      <div class="col-md-12 d-none d-sm-block d-md-block d-lg-none d-block d-sm-none text-center ml-auto mr-auto">
-                          <h5>The icons are visible on Desktop mode inside an iframe. Since the iframe is not working on Mobile and Tablets please visit the icons on their original page on Google. Check the
-                              <a href="https://fonts.google.com/icons" target="_blank">Material Icons</a>
-                          </h5>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-</div> -->
+<div fxLayout="column" fxLayoutAlign="center center" fxFlex="100">
+    <div fxLayout="row" fxFlex="100" fxLayoutAlign="center center">
+        <app-card [nombre]="'titulo'" class="card-app">
+            <div class="card-content" fxLayout="row" fxLayoutAlign="center center">
+                <img src="../../assets/img/logo-cipe.png" width="200px" height="100" alt="">
+                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe vel doloribus itaque ratione tenetur? Inventore quasi quisquam debitis nihil ea soluta, praesentium, quis reiciendis dicta quia nulla! Dignissimos, reprehenderit eius?</span>
+            </div>
+        </app-card>
+    </div>
+    <div fxLayout="row" fxFlex="100" fxLayoutAlign="center center" fxLayoutGap="20">
+        <app-card [nombre]="'titulo'" class="card-app">
+            <div class="card-content" fxLayout="row" fxLayoutAlign="center center">
+                <img src="../../assets/img/angular.png" alt="">
+                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe vel doloribus itaque ratione tenetur? Inventore quasi quisquam debitis nihil ea soluta, praesentium, quis reiciendis dicta quia nulla! Dignissimos, reprehenderit eius?</span>
+            </div>
+        </app-card>
+    </div>
+</div>
