--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -1,7 +1,6 @@
 .wrapper{
     position: relative;
-    top: 0;
-    height: 100vh;
+   text-align: left;
 }
 
 .sidebar {
@@ -31,15 +30,9 @@
     }
     .logo-img{
         width: 35px;
-        display: block;
-        max-height: 30px;
-        margin-left: 13px;
-        margin-right: 15px;
 
         img{
-            width: 35px;
-            //top: 16px;
-            position: absolute;
+            width: 250px;
         }
     }
     .sidebar-wrapper{
@@ -410,13 +403,7 @@
 .sidebar,
 .main-panel,
 .sidebar-wrapper{
-    -webkit-transition-property: top,bottom,width;
-    transition-property: top,bottom, width;
-    -webkit-transition-duration: .2s,.2s, .35s;
-    transition-duration: .2s,.2s, .35s;
-    -webkit-transition-timing-function: linear,linear,ease;
-    transition-timing-function: linear,linear,ease;
-    -webkit-overflow-scrolling: touch;
+    
 }
 
 .visible-on-sidebar-regular{
